--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-<p>hello my name is bobby.</p>
+    <p>Hello, my name is Bobby.</p>
   </body>
 </html>
