--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Robert Allen</title>
   </head>
   <body>
+    <h1>Hello, Code School!</h1>
     <p>Hello, my name is Bobby.</p>
+    <ul>
+      <li>Github publishing</li>
+      <li>Git</li>
+      <li>Git commands</li>
+      <li>Terminal navigation</li>
+    </ul>
   </body>
 </html>
